# Ardupilot-Log-Parser

./: .gitignore  CMakeLists.txt  README.md  generate_mission_log.py  main.cpp  rapor.md
Task2_SearchPattern/: lawnmower.cpp
